syntax = "proto3";

package products;

service ProductService {
    rpc getProduct (ProductRequest) returns (ProductResponse);
    rpc craeteProduct (CreateProductDto) returns (ProductResponse);
    rpc findAllProducts (Empty) returns (Products);
    rpc updateProduct (UpdataProductDto) returns (ProductResponse);
    rpc deleteProduct (ProductRequest) returns (ProductResponse);
}

message UpdataProductDto {
    int32 productId = 1;
    int32 price = 2;
}

message Empty {};

message Products {
    repeated ProductResponse users = 1;
}

message ProductRequest {
    int32 productId = 1;
}

message ProductResponse {
    int32 productId = 1;
    string name = 2;
    int32 price = 3;
}

message CreateProductDto {
    string name = 1;
    int32 price = 2;
}

